added open shift

--- a/cppk/app/build.gradle
+++ b/cppk/app/build.gradle
@@ -19,7 +19,9 @@ android {
 
     defaultConfig {
         minSdkVersion rootProject.minSdkVersion
+//        minSdkVersion 26
         targetSdkVersion rootProject.targetSdkVersion
+//        targetSdkVersion 26
         applicationId "ru.ppr.cppk"
         versionCode 1
         versionName getAppVersionName()
