--- a/cppk/settings.gradle
+++ b/cppk/settings.gradle
@@ -55,4 +55,7 @@ project(":barcodereal").projectDir = file("../devices/barcodereal")
 include ':cpcpowermgmt'
 project(":cpcpowermgmt").projectDir = file("../libraries/cpcpowermgmt")
 
+include ':FNLibrary2'
+project(":FNLibrary2").projectDir = file("../common/FNLibrary2")
+
 include ':app'
