Распечатка и чтение штрихкодов

--- a/chit/chit_domain/build.gradle
+++ b/chit/chit_domain/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     // UnitTests
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.7.19'
+    compile project(path: ':ptk')
+//    compile project(path: ':ptk')
 }
