--- a/devices/barcodereal/build.gradle
+++ b/devices/barcodereal/build.gradle
@@ -22,10 +22,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(include: ['platform_sdk_v4.1.0326.jar'], dir: '../../libraries')
     compile project(':barcode')
+    compile project(':rfidreal')
     compile project(':cpcpowermgmt')
     // Gson
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'fr.coppernic.cpcframework.cpcutils:CpcUtilsLib-6.1.0@aar'
+//    compile 'com.android.support:appcompat-v7:28.0.0'
+    //compile 'androidx.fragment:fragment:1.1.0'
 
 }
